[project]
name = "batch-ocr-example"
version = "0.1.0"
description = "Batch Document OCR workflow with multi-model comparison using Flyte 2.0"
requires-python = ">=3.10"
dependencies = [
    "flyte>=2.0.0b40",
]

[project.optional-dependencies]
# OCR-specific dependencies - all models and features
ocr = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "Pillow>=10.0.0",
    "datasets>=2.18.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "async-lru>=2.0.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "unionai-reuse",
]

# All dependencies
all = [
    "batch-ocr-example[ocr]",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
