[project]
name = "my_transformer"
version = "0.1.0"
description = "Custom type transformer"
requires-python = ">=3.10"
dependencies = []

# This section needs to be added to get uv sync to install this package (this package being seeds).
[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.entry-points."flyte.plugins.types"]
my_transformer = "my_type.my_transformer:register_positive_int_transformer"
