[project]
name = "albatross"
version = "0.1.0"
description = "examples"
requires-python = ">=3.10"
dependencies = [
    "flyte>=2.0.0b22", # make sure that flyte is added to dependencies, or it will be excluded by uv sync
    "bird-feeder",
    "seeds",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# No src-layout: let setuptools auto-discover packages in-place
[tool.setuptools.packages.find]
where = ["."]
include = ["*"]